[gd_scene load_steps=6 format=3 uid="uid://bu158sn0lm6ix"]

[ext_resource type="Script" uid="uid://dapapj2rct0k7" path="res://scenes/company.gd" id="1_d51se"]
[ext_resource type="PackedScene" uid="uid://btjlybatmu8lr" path="res://scenes/cave_background.tscn" id="1_e4nfj"]
[ext_resource type="PackedScene" uid="uid://c24ale6he22kd" path="res://enemies/golem_blue.tscn" id="2_d51se"]
[ext_resource type="FontFile" uid="uid://di2n68my14jww" path="res://assets/fonts/Jersey20-Regular.ttf" id="4_dhsw8"]
[ext_resource type="PackedScene" uid="uid://b7csb88rlwp7i" path="res://enemies/golem_gold.tscn" id="5_genf0"]

[node name="company" type="Node2D"]
script = ExtResource("1_d51se")

[node name="cave_background" parent="." instance=ExtResource("1_e4nfj")]

[node name="golem_blue" parent="." instance=ExtResource("2_d51se")]
visible = false
position = Vector2(1000, 570)

[node name="level" type="Label" parent="."]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 400.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_dhsw8")
theme_override_font_sizes/font_size = 80
text = "LEVEL:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="golem_gold" parent="." instance=ExtResource("5_genf0")]
visible = false
position = Vector2(1000, 570)
